# GameOfLife

./: CMakeLists.txt  README.md  buildnrun.bat  main.cpp
